authz-server/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authz
  labels:
    istio.io/rev: $ISTIO_REVISION
---
apiVersion: v1
kind: Service
metadata:
  name: authz-server
  namespace: authz
  labels:
    app: authz-server
spec:
  ports:
    - name: grpc
      port: 9001
      targetPort: 9001
  selector:
    app: authz-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authz-server
  namespace: authz
spec:
  selector:
    matchLabels:
      app: authz-server
  replicas: 1
  template:
    metadata:
      labels:
        app: authz-server
    spec:
      serviceAccountName: authz-sa
      containers:
        - name: authz
          image: australia-southeast1-docker.pkg.dev/field-engineering-apac/public-repo/authz-server:v0.1.0
          imagePullPolicy: IfNotPresent
          args:
            - --port=9001
          ports:
            - containerPort: 9001
          volumeMounts:
            - name: keyfile
              mountPath: "/data/certs"
              readOnly: true
      volumes:
        - name: keyfile
          secret:
            secretName: signing-verify-keys
